data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2075.wast
;; 6. **Test Description:**    A block containing a loop where a `br` instruction is used to branch out but has the wrong label, causing unintended infinite execution.      **Constraint Checked:** Label indexing and correctness of branch targets.      **Relation to Infinite Loops:** Checks if branch instructions properly handle label indexing, ensuring intended loop exits.

(assert_invalid
  (module 
    (func $test_incorrect_label (block (loop (br 2))))
  )
  "invalid label"
)